# invoices-ai

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  README.md  pyproject.toml
.agent/workflows/: issue_report.md  release.md  setup.md  update_deps.md
.gemini/: instructions.md
src/: extract_invoice.py
src/invoice_generator/: extract_invoice.py
