[project]
name = "invoice-generator"
version = "0.4.0"
description = "Professional invoice generator with PDF output"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Roman Medvedev", email = "github@romavm.dev" },
]
keywords = ["invoice", "invoice generator", "ai", "agent", "automation"]
dependencies = [
    "py-invoices[cli,pdf]>=1.8.4",
]

[project.optional-dependencies]
parsing = [
    "pdfplumber>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/romamo/invoices-ai"
Repository = "https://github.com/romamo/invoices-ai"
Issues = "https://github.com/romamo/invoices-ai/issues"

[project.scripts]
extract-invoice = "invoice_generator.extract_invoice:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invoice_generator"]
